--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -1,9 +1,7 @@
+<?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
-
-    <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:showAsAction="never"
-        android:title="@string/action_settings"/>
-
+    <item android:id="@+id/stop_wtch_menu_item" android:title="Stop Watch" android:icon="@drawable/ic_menu_stop_watch"></item>
+    <item android:id="@+id/compass_menu_item" android:title="Compass"></item>
+    <item android:id="@+id/waveform_menu_item" android:title="Waveform"></item>
+    <item android:id="@+id/level_menu_item" android:title="Level"></item>
 </menu>
