--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
 
     <!--
         Base application theme, dependent on API level. This theme is replaced
@@ -13,8 +13,19 @@
     </style>
 
     <!-- Application theme. -->
-    <style name="AppTheme" parent="AppBaseTheme">
+    <style name="AppTheme" parent="@style/GlassTheme">
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
     </style>
 
+    <!-- Pulled from existing Glass apps -->
+    <style name="GlassTheme" parent="@*android:style/Theme.DeviceDefault" tools:ignore="PrivateResource">
+        <item name="android:screenOrientation">landscape</item>
+        <item name="android:windowBackground">@*android:color/black</item>
+        <item name="android:windowNoTitle">true</item>
+        <!-- <item name="android:windowAnimationStyle">@style/Animation.Modal</item> -->
+        <item name="android:windowFullscreen">true</item>
+        <item name="android:colorBackgroundCacheHint">@*android:color/black</item>
+        <item name="android:windowActionBar">false</item>
+    </style>
+    
 </resources>
